--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,10 @@
   --form-light-color: #d3c6c6;
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
 body {
   font-family: "Open Sans", sans-serif;
   min-height: 100vh;
@@ -85,6 +89,7 @@ button {
 .convert-form {
   position: relative;
   width: 693px;
+  transition: all 0.3s ease-in;
 }
 
 .convert-form--dark {
@@ -162,9 +167,19 @@ button {
   /* font-size: 15px; */
 }
 
-.convert-form__input--focus {
-  outline: 1.5px solid green;
-  box-shadow: 0 0 5px green;
+.convert-form__input--focus-light {
+  outline: 1.5px solid #084740;
+  box-shadow: 0 0 5px #084740;
+}
+
+.convert-form__input--focus-dark {
+  outline: 1.5px solid var(--orange);
+  box-shadow: 0 0 5px var(--orange);
+}
+
+.convert-form__input--focus-moon {
+  outline: 1.5px solid #20b2aa;
+  box-shadow: 0 0 5px #20b2aa;
 }
 
 .convert-form__outputs,
@@ -236,14 +251,16 @@ button {
   margin-bottom: 30px;
 }
 
-.form-input__title {
+.form-input__title,
+.form-output__title {
   font-weight: 300;
   font-size: 18px;
   text-transform: uppercase;
   color: var(--white);
 }
 
-.form-input__coin {
+.form-input__coin,
+.form-output__coin {
   font-weight: 300;
   font-style: italic;
   color: var(--white);
@@ -407,12 +424,12 @@ button {
 }
 
 .output-coins__output-btn--light:hover {
-  background-color: rgba(8,71,64, 0.8);
+  background-color: rgba(8, 71, 64, 0.8);
   box-shadow: 0 0 7px var(--white);
 }
 
 .output-coins__output-btn--moon:hover {
-  background-color: rgba(32,178,170, 0.8);
+  background-color: rgba(32, 178, 170, 0.8);
   box-shadow: 0 0 7px var(--white);
 }
 
@@ -489,7 +506,7 @@ button {
   border-radius: 3px;
   font-family: "Open Sans", sans-serif;
   font-size: 14px;
-  padding: 5px 7px;
+  padding: 8px 15px;
   padding-right: 35px;
   color: var(--white);
 
@@ -596,3 +613,31 @@ button {
   overflow: hidden;
   clip: rect(0, 0, 0, 0);
 }
+
+
+/* preloader */
+
+.preloader-page {
+  background-color: rgba(255,255,255);
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  z-index: 7000;
+}
+
+.preloader-page::before {
+    content: '';
+    width: 220px;
+    height: 220px;
+    background-image: url('../images/coin-flip-preloader.gif');
+    background-position: center;
+    background-size: cover;
+    border-radius: 50%;
+  }
+
+  .preloader-page.done {
+    display: none;
+  }
